# llm_wrapper

./: pyproject.toml  requirements.txt
llm_wrapper/: __init__.py  llm_wrapper.py
ollama/: __init__.py  docker-compose-cpu.yaml  ollama_wrapper.py
