[project]
name = "my-llm-lib"
version = "0.1.0"
dependencies = [
  "transformers @ git+https://github.com/huggingface/transformers@bf41e54fc8242dafa31bf6203e3d505bcb907119",
  "torch==2.6.0",
  "torchvision==0.21.0",
  "openai==1.77.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"